<resources>
    <string name="app_name">SurvApp</string>
    <string name="register">Registro</string>
    <string name="recover">Recuperar cuenta</string>
    <string name="account_name">Nombre de usuario</string>
    <string name="pass">Contraseña</string>
    <string name="remember">No cerrar sesión</string>
    <string name="login">Iniciar sesión</string>
    <string name="not_account">¿No tienes cuenta?</string>
    <string name="forgot_pass">¿Olvidaste la contraseña?</string>
    <string name="or">O</string>
    <string name="confirm">Confirme la contraseña</string>
    <string name="email">Correo</string>
    <string name="info_recover">Se enviara una contraseña temporal a su correo electronico, cambie la contraseña por seguridad.</string>
    <string name="sent">Enviar</string>
    <string name="error_email">Correo no válido</string>
    <string name="error_pass">Contraseña no válida</string>
    <string name="error_login">Correo o contraseña erronea</string>
    <string name="accountName_empty">Debes añadir un nombre de cuenta</string>
    <string name="accountName_short">Nombre de cuenta demasiado corto</string>
    <string name="password_match">Las contraseñas no coinciden</string>
    <string name="password_short">La contraseña es demasiado corta</string>
    <string name="email_register">Correo ya registrado</string>
    <string name="accountName_register">Nombre de cuenta ya registrado</string>
    <string name="register_error">Hubo un error inesperado en el registro</string>
    <string name="succesful_regis">Registro exitoso</string>
    <string name="social">Social</string>
    <string name="idea">Idea</string>
    <string name="home">Inicio</string>
    <string name="empty_idea">No tienes ninguna idea ¡Añade una ahora!</string>
    <string name="empty_social">No sigues a nadie ¡Añade a alguien!</string>
    <string name="empty_ideas">No hay más ideas que responder. ¡Enhorabuena!</string>
    <string name="followers">Seguidores</string>
    <string name="following">Seguidos</string>
    <string name="modify_profile">Modificar perfil</string>
    <string name="send_incident">Enviar incidencia</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="title_empty">Esta vacia</string>
    <string name="title_short">Demasiado corto</string>
    <string name="description_empty">Esta vacia</string>
    <string name="description_short">Demasiada corta</string>
    <string name="title_incident">Titulo incidencia</string>
    <string name="description_incident">Descripción de la incidencia</string>
    <string name="modify_user">Modificar usuario</string>
    <string name="repeat_pass">Confirmar contraseña</string>
    <string name="add_follow">Seguir</string>
    <string name="error_follow_user">Usuario no encontrado</string>
    <string name="fail_follow_user">Ya sigues al usuario</string>
    <string name="cancel">Cancelar</string>
    <string name="see_idea">Ver ideas</string>
    <string name="remove_follow">Dejar de seguir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_idea">Nueva idea</string>
    <string name="title">Titulo</string>
    <string name="description">Descripción</string>
    <string name="theme">Tema:</string>
    <string name="answer_1">Primera respuesta</string>
    <string name="answer_2">Segunda respuesta</string>
    <string name="answer_3">Tercera respuesta</string>
    <string name="answer_4">Cuarta respuesta</string>
    <string name="Empty_answer_idea">Ya no te quedan ideas que responder de otros usuarios</string>
    <string name="stat_idea">Estadísticas de la idea</string>
    <string name="remove_idea">Eliminar idea</string>
    <string name="empty_comment">No has recibido ningun comentario</string>
    <string name="title_comment">Comentarios</string>
    <string name="commnet_idea">Comentarios de la idea</string>
    <string name="report_idea">Denunciar idea</string>
    <string name="skip_idea">Actualizar</string>
    <string name="creator">Creador: </string>
    <string name="send_succesful">Enviado correctamente</string>
    <string name="comment">Comentario</string>
    <string name="friend_ideas">No añadio ninguna idea.</string>
    <string name="friend">Perfil seguidor</string>
    <string name="answer_idea">Responder idea</string>
    <string name="answered_answer">Idea ya respondida</string>
    <string name="error_sesion">La cuenta ya tiene una sesión iniciada</string>
    <string name="error_server">Problema al intentar conectar con el servidor.Pruebe en otro momento.</string>
    <string name="sure">¿Estas seguro?</string>
</resources>
