<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ResponderIdeaAmigoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/answer_idea"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_send_idea_friend"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:src="@drawable/back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/idea"
                android:gravity="center"
                android:layout_marginLeft="8dp"
                android:textColor="@color/colorAccent"
                android:layout_toRightOf="@id/back_send_idea_friend"
                android:textSize="22sp"
                android:textStyle="bold"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:orientation="vertical">

            <LinearLayout

                android:id="@+id/idea_Layout_friend"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/idea_title_friend"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textSize="28sp"
                    android:gravity="center"
                    android:layout_marginRight="24dp"
                    android:layout_marginLeft="24dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:text="@string/title"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"/>

                <TextView
                    android:id="@+id/idea_description_friend"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginRight="24dp"
                    android:layout_marginLeft="24dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/description"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/idea_answer_1_friend"
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/answer_1"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:paddingLeft="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="16dp"
                        android:textColor="@color/colorAccent"/>

                    <TextView
                        android:id="@+id/idea_answer_2_friend"
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/answer_2"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:paddingLeft="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="16dp"
                        android:textColor="@color/colorAccent"/>

                    <TextView
                        android:id="@+id/idea_answer_3_friend"
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/answer_3"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:paddingLeft="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="16dp"
                        android:visibility="invisible"
                        android:textColor="@color/colorAccent"/>

                    <TextView
                        android:id="@+id/idea_answer_4_friend"
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/answer_4"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:paddingLeft="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="16dp"
                        android:visibility="invisible"
                        android:textColor="@color/colorAccent"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/idea_creator_friend"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="left|bottom"
                    android:textStyle="bold"
                    android:text="@string/creator"/>

                <TextView
                    android:id="@+id/idea_theme_friend"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:layout_marginRight="24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="left|center"
                    android:textStyle="bold"
                    android:text="@string/theme"/>

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_comment_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/colorPrimary"
                android:src="@drawable/add_comment"
                android:visibility="visible"/>
        </RelativeLayout>

    </LinearLayout>

</FrameLayout>