<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RecuperarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_recover_account"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:src="@drawable/back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/recover"
                android:gravity="center"
                android:layout_toRightOf="@id/back_recover_account"
                android:layout_marginLeft="8dp"
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                android:textStyle="bold"/>


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/recover"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:orientation="vertical"
            android:background="@color/colorAccent">

            <LinearLayout
                android:id="@+id/container_recover_logo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/recover"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="38sp"
                    android:gravity="center"

                    />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/container_recover"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"

                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_recover_account_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/account_name"
                    android:background="@drawable/et_border"
                    android:layout_marginBottom="8dp"
                    android:paddingLeft="8dp"
                    />

                <EditText
                    android:id="@+id/et_recover_email"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/email"
                    android:background="@drawable/et_border"
                    android:layout_marginBottom="8dp"

                    android:paddingLeft="8dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:background="@drawable/border_info">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp"
                        android:textSize="16sp"
                        android:text="@string/info_recover"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="56dp"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/label_recover_info"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/red"
                    />
                <Button
                    android:id="@+id/b_recover"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/sent"
                    android:textSize="20sp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginBottom="8dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="24dp"

                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>